--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,14 @@
 body{
     background-color: aqua;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h1{
+
+    font-family: 'Courier New', Courier, monospace;
+    font-size: medium;
+    font-style: oblique;
 }
